Offset the Joints

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/PlayerLEvel.PlayerLEvel
 GlobalDefaultGameMode=/Game/Framework/BP_CGameMode.BP_CGameMode_C
+EditorStartupMap=/Game/Maps/PlayerLEvel.PlayerLEvel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
